--- a/Groupe 2/Groupe 2/rendu.ipynb
+++ b/Groupe 2/Groupe 2/rendu.ipynb
@@ -1296,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1311,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1326,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -1489,7 +1489,7 @@
        "56                  Morbihan                          152740"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1500,7 +1500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -1663,7 +1663,7 @@
        "77                  Seine-et-Marne                 17.756227"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2079,7 +2079,198 @@
     }
    ],
    "source": [
-    "df"
+    "segmentation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def comm_prct(voix,prct,choix,asc):\n",
+    "      tab = df[['Libellé de la commune', voix]]\n",
+    "      tab1 = df[['Libellé de la commune', prct]]\n",
+    "      \n",
+    "      frame = pd.DataFrame(tab)\n",
+    "      frame1 = pd.DataFrame(tab1)\n",
+    "      #frame2 = frame.merge(frame1)\n",
+    "\n",
+    "     \n",
+    "      #res1 = frame.groupby([\"Libellé de la commune\"]).sum()\n",
+    "      #res2 = frame1.groupby([\"Libellé de la commune\"]).mean()\n",
+    "\n",
+    "      #df1 = pd.DataFrame(res1)\n",
+    "      #df2 = pd.DataFrame(res2)\n",
+    "      \n",
+    "      #total = df1.merge(df2)\n",
+    "\n",
+    "      res2 = frame1.groupby([\"Libellé de la commune\"]).mean().to_frame(name = 'mean').reset_index()\n",
+    "\n",
+    "      if choix == 1 : \n",
+    "            resultat = total.sort_values(by=voix,ascending=asc) \n",
+    "      elif choix == 2 :\n",
+    "            resultat = total.sort_values(by=prct,ascending=asc)\n",
+    "\n",
+    "      return res2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'DataFrame' object has no attribute 'to_frame'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\belkh\\Documents\\Cours\\ADGit\\AnalyseDeDonnees\\Groupe 2\\Groupe 2\\rendu.ipynb Cell 31'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/belkh/Documents/Cours/ADGit/AnalyseDeDonnees/Groupe%202/Groupe%202/rendu.ipynb#ch0000031?line=0'>1</a>\u001b[0m comm_prct(\u001b[39m'\u001b[39;49m\u001b[39mVoix.MJL\u001b[39;49m\u001b[39m'\u001b[39;49m,\u001b[39m'\u001b[39;49m\u001b[39m%\u001b[39;49m\u001b[39m Voix/Ins.MJL\u001b[39;49m\u001b[39m'\u001b[39;49m,\u001b[39m1\u001b[39;49m, \u001b[39mFalse\u001b[39;49;00m)\n",
+      "\u001b[1;32mc:\\Users\\belkh\\Documents\\Cours\\ADGit\\AnalyseDeDonnees\\Groupe 2\\Groupe 2\\rendu.ipynb Cell 30'\u001b[0m in \u001b[0;36mcomm_prct\u001b[1;34m(voix, prct, choix, asc)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/belkh/Documents/Cours/ADGit/AnalyseDeDonnees/Groupe%202/Groupe%202/rendu.ipynb#ch0000030?line=5'>6</a>\u001b[0m frame1 \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDataFrame(tab1)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/belkh/Documents/Cours/ADGit/AnalyseDeDonnees/Groupe%202/Groupe%202/rendu.ipynb#ch0000030?line=6'>7</a>\u001b[0m \u001b[39m#frame2 = frame.merge(frame1)\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/belkh/Documents/Cours/ADGit/AnalyseDeDonnees/Groupe%202/Groupe%202/rendu.ipynb#ch0000030?line=7'>8</a>\u001b[0m \n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/belkh/Documents/Cours/ADGit/AnalyseDeDonnees/Groupe%202/Groupe%202/rendu.ipynb#ch0000030?line=8'>9</a>\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/belkh/Documents/Cours/ADGit/AnalyseDeDonnees/Groupe%202/Groupe%202/rendu.ipynb#ch0000030?line=14'>15</a>\u001b[0m \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/belkh/Documents/Cours/ADGit/AnalyseDeDonnees/Groupe%202/Groupe%202/rendu.ipynb#ch0000030?line=15'>16</a>\u001b[0m \u001b[39m#total = df1.merge(df2)\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/belkh/Documents/Cours/ADGit/AnalyseDeDonnees/Groupe%202/Groupe%202/rendu.ipynb#ch0000030?line=17'>18</a>\u001b[0m res2 \u001b[39m=\u001b[39m frame1\u001b[39m.\u001b[39;49mgroupby([\u001b[39m\"\u001b[39;49m\u001b[39mLibellé de la commune\u001b[39;49m\u001b[39m\"\u001b[39;49m])\u001b[39m.\u001b[39;49mmean()\u001b[39m.\u001b[39;49mto_frame(name \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mmean\u001b[39m\u001b[39m'\u001b[39m)\u001b[39m.\u001b[39mreset_index()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/belkh/Documents/Cours/ADGit/AnalyseDeDonnees/Groupe%202/Groupe%202/rendu.ipynb#ch0000030?line=19'>20</a>\u001b[0m \u001b[39mif\u001b[39;00m choix \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m : \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/belkh/Documents/Cours/ADGit/AnalyseDeDonnees/Groupe%202/Groupe%202/rendu.ipynb#ch0000030?line=20'>21</a>\u001b[0m       resultat \u001b[39m=\u001b[39m total\u001b[39m.\u001b[39msort_values(by\u001b[39m=\u001b[39mvoix,ascending\u001b[39m=\u001b[39masc) \n",
+      "File \u001b[1;32mc:\\ProgramData\\Anaconda3\\lib\\site-packages\\pandas\\core\\generic.py:5575\u001b[0m, in \u001b[0;36mNDFrame.__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   <a href='file:///c%3A/ProgramData/Anaconda3/lib/site-packages/pandas/core/generic.py?line=5567'>5568</a>\u001b[0m \u001b[39mif\u001b[39;00m (\n\u001b[0;32m   <a href='file:///c%3A/ProgramData/Anaconda3/lib/site-packages/pandas/core/generic.py?line=5568'>5569</a>\u001b[0m     name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_internal_names_set\n\u001b[0;32m   <a href='file:///c%3A/ProgramData/Anaconda3/lib/site-packages/pandas/core/generic.py?line=5569'>5570</a>\u001b[0m     \u001b[39mand\u001b[39;00m name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_metadata\n\u001b[0;32m   <a href='file:///c%3A/ProgramData/Anaconda3/lib/site-packages/pandas/core/generic.py?line=5570'>5571</a>\u001b[0m     \u001b[39mand\u001b[39;00m name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_accessors\n\u001b[0;32m   <a href='file:///c%3A/ProgramData/Anaconda3/lib/site-packages/pandas/core/generic.py?line=5571'>5572</a>\u001b[0m     \u001b[39mand\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_info_axis\u001b[39m.\u001b[39m_can_hold_identifiers_and_holds_name(name)\n\u001b[0;32m   <a href='file:///c%3A/ProgramData/Anaconda3/lib/site-packages/pandas/core/generic.py?line=5572'>5573</a>\u001b[0m ):\n\u001b[0;32m   <a href='file:///c%3A/ProgramData/Anaconda3/lib/site-packages/pandas/core/generic.py?line=5573'>5574</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m[name]\n\u001b[1;32m-> <a href='file:///c%3A/ProgramData/Anaconda3/lib/site-packages/pandas/core/generic.py?line=5574'>5575</a>\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mobject\u001b[39;49m\u001b[39m.\u001b[39;49m\u001b[39m__getattribute__\u001b[39;49m(\u001b[39mself\u001b[39;49m, name)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'to_frame'"
+     ]
+    }
+   ],
+   "source": [
+    "comm_prct('Voix.MJL','% Voix/Ins.MJL',1, False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def comm_prct(voix,prct):\n",
+    "    tab = df[['Libellé de la commune', voix]]\n",
+    "    tab1 = df[['Libellé de la commune', prct]]\n",
+    "      \n",
+    "    frame = pd.DataFrame(tab)\n",
+    "    frame1 = pd.DataFrame(tab1)\n",
+    "     \n",
+    "    res = frame.groupby([\"Libellé de la commune\"]).sum()\n",
+    "    res1 = frame1.groupby([\"Libellé de la commune\"]).mean()\n",
+    "\n",
+    "    df1 = pd.DataFrame(res)\n",
+    "    df2 = pd.DataFrame(res1)\n",
+    "      \n",
+    "    #total = df1.merge(df2)\n",
+    "\n",
+    "\n",
+    "    return df1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Voix.MJL</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Libellé de la commune</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Aast</th>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Abainville</th>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Abancourt</th>\n",
+       "      <td>74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Abaucourt</th>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Abaucourt-Hautecourt</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Éloise</th>\n",
+       "      <td>78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Étercy</th>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Étrembières</th>\n",
+       "      <td>161</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Évian-les-Bains</th>\n",
+       "      <td>872</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ô-de-Selle</th>\n",
+       "      <td>101</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>32987 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       Voix.MJL\n",
+       "Libellé de la commune          \n",
+       "Aast                         23\n",
+       "Abainville                   20\n",
+       "Abancourt                    74\n",
+       "Abaucourt                    26\n",
+       "Abaucourt-Hautecourt          5\n",
+       "...                         ...\n",
+       "Éloise                       78\n",
+       "Étercy                       88\n",
+       "Étrembières                 161\n",
+       "Évian-les-Bains             872\n",
+       "Ô-de-Selle                  101\n",
+       "\n",
+       "[32987 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 193,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comm_prct('Voix.MJL','% Voix/Ins.MJL')"
    ]
   }
  ],
