--- a/Groupe 2/Groupe 2/rendu.ipynb
+++ b/Groupe 2/Groupe 2/rendu.ipynb
@@ -2084,67 +2084,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def comm_prct(voix,prct,choix,asc):\n",
-    "      tab = df[['Libellé de la commune', voix]]\n",
-    "      tab1 = df[['Libellé de la commune', prct]]\n",
-    "      \n",
-    "      frame = pd.DataFrame(tab)\n",
-    "      frame1 = pd.DataFrame(tab1)\n",
-    "      #frame2 = frame.merge(frame1)\n",
-    "\n",
-    "     \n",
-    "      #res1 = frame.groupby([\"Libellé de la commune\"]).sum()\n",
-    "      #res2 = frame1.groupby([\"Libellé de la commune\"]).mean()\n",
-    "\n",
-    "      #df1 = pd.DataFrame(res1)\n",
-    "      #df2 = pd.DataFrame(res2)\n",
-    "      \n",
-    "      #total = df1.merge(df2)\n",
-    "\n",
-    "      res2 = frame1.groupby([\"Libellé de la commune\"]).mean().to_frame(name = 'mean').reset_index()\n",
-    "\n",
-    "      if choix == 1 : \n",
-    "            resultat = total.sort_values(by=voix,ascending=asc) \n",
-    "      elif choix == 2 :\n",
-    "            resultat = total.sort_values(by=prct,ascending=asc)\n",
-    "\n",
-    "      return res2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 185,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute 'to_frame'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\belkh\\Documents\\Cours\\ADGit\\AnalyseDeDonnees\\Groupe 2\\Groupe 2\\rendu.ipynb Cell 31'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/belkh/Documents/Cours/ADGit/AnalyseDeDonnees/Groupe%202/Groupe%202/rendu.ipynb#ch0000031?line=0'>1</a>\u001b[0m comm_prct(\u001b[39m'\u001b[39;49m\u001b[39mVoix.MJL\u001b[39;49m\u001b[39m'\u001b[39;49m,\u001b[39m'\u001b[39;49m\u001b[39m%\u001b[39;49m\u001b[39m Voix/Ins.MJL\u001b[39;49m\u001b[39m'\u001b[39;49m,\u001b[39m1\u001b[39;49m, \u001b[39mFalse\u001b[39;49;00m)\n",
-      "\u001b[1;32mc:\\Users\\belkh\\Documents\\Cours\\ADGit\\AnalyseDeDonnees\\Groupe 2\\Groupe 2\\rendu.ipynb Cell 30'\u001b[0m in \u001b[0;36mcomm_prct\u001b[1;34m(voix, prct, choix, asc)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/belkh/Documents/Cours/ADGit/AnalyseDeDonnees/Groupe%202/Groupe%202/rendu.ipynb#ch0000030?line=5'>6</a>\u001b[0m frame1 \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDataFrame(tab1)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/belkh/Documents/Cours/ADGit/AnalyseDeDonnees/Groupe%202/Groupe%202/rendu.ipynb#ch0000030?line=6'>7</a>\u001b[0m \u001b[39m#frame2 = frame.merge(frame1)\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/belkh/Documents/Cours/ADGit/AnalyseDeDonnees/Groupe%202/Groupe%202/rendu.ipynb#ch0000030?line=7'>8</a>\u001b[0m \n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/belkh/Documents/Cours/ADGit/AnalyseDeDonnees/Groupe%202/Groupe%202/rendu.ipynb#ch0000030?line=8'>9</a>\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/belkh/Documents/Cours/ADGit/AnalyseDeDonnees/Groupe%202/Groupe%202/rendu.ipynb#ch0000030?line=14'>15</a>\u001b[0m \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/belkh/Documents/Cours/ADGit/AnalyseDeDonnees/Groupe%202/Groupe%202/rendu.ipynb#ch0000030?line=15'>16</a>\u001b[0m \u001b[39m#total = df1.merge(df2)\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/belkh/Documents/Cours/ADGit/AnalyseDeDonnees/Groupe%202/Groupe%202/rendu.ipynb#ch0000030?line=17'>18</a>\u001b[0m res2 \u001b[39m=\u001b[39m frame1\u001b[39m.\u001b[39;49mgroupby([\u001b[39m\"\u001b[39;49m\u001b[39mLibellé de la commune\u001b[39;49m\u001b[39m\"\u001b[39;49m])\u001b[39m.\u001b[39;49mmean()\u001b[39m.\u001b[39;49mto_frame(name \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mmean\u001b[39m\u001b[39m'\u001b[39m)\u001b[39m.\u001b[39mreset_index()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/belkh/Documents/Cours/ADGit/AnalyseDeDonnees/Groupe%202/Groupe%202/rendu.ipynb#ch0000030?line=19'>20</a>\u001b[0m \u001b[39mif\u001b[39;00m choix \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m : \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/belkh/Documents/Cours/ADGit/AnalyseDeDonnees/Groupe%202/Groupe%202/rendu.ipynb#ch0000030?line=20'>21</a>\u001b[0m       resultat \u001b[39m=\u001b[39m total\u001b[39m.\u001b[39msort_values(by\u001b[39m=\u001b[39mvoix,ascending\u001b[39m=\u001b[39masc) \n",
-      "File \u001b[1;32mc:\\ProgramData\\Anaconda3\\lib\\site-packages\\pandas\\core\\generic.py:5575\u001b[0m, in \u001b[0;36mNDFrame.__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   <a href='file:///c%3A/ProgramData/Anaconda3/lib/site-packages/pandas/core/generic.py?line=5567'>5568</a>\u001b[0m \u001b[39mif\u001b[39;00m (\n\u001b[0;32m   <a href='file:///c%3A/ProgramData/Anaconda3/lib/site-packages/pandas/core/generic.py?line=5568'>5569</a>\u001b[0m     name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_internal_names_set\n\u001b[0;32m   <a href='file:///c%3A/ProgramData/Anaconda3/lib/site-packages/pandas/core/generic.py?line=5569'>5570</a>\u001b[0m     \u001b[39mand\u001b[39;00m name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_metadata\n\u001b[0;32m   <a href='file:///c%3A/ProgramData/Anaconda3/lib/site-packages/pandas/core/generic.py?line=5570'>5571</a>\u001b[0m     \u001b[39mand\u001b[39;00m name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_accessors\n\u001b[0;32m   <a href='file:///c%3A/ProgramData/Anaconda3/lib/site-packages/pandas/core/generic.py?line=5571'>5572</a>\u001b[0m     \u001b[39mand\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_info_axis\u001b[39m.\u001b[39m_can_hold_identifiers_and_holds_name(name)\n\u001b[0;32m   <a href='file:///c%3A/ProgramData/Anaconda3/lib/site-packages/pandas/core/generic.py?line=5572'>5573</a>\u001b[0m ):\n\u001b[0;32m   <a href='file:///c%3A/ProgramData/Anaconda3/lib/site-packages/pandas/core/generic.py?line=5573'>5574</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m[name]\n\u001b[1;32m-> <a href='file:///c%3A/ProgramData/Anaconda3/lib/site-packages/pandas/core/generic.py?line=5574'>5575</a>\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mobject\u001b[39;49m\u001b[39m.\u001b[39;49m\u001b[39m__getattribute__\u001b[39;49m(\u001b[39mself\u001b[39;49m, name)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'to_frame'"
-     ]
-    }
-   ],
-   "source": [
-    "comm_prct('Voix.MJL','% Voix/Ins.MJL',1, False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 192,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def comm_prct(voix,prct):\n",
+    "def comm_candidat(voix,prct,choix,asc):\n",
     "    tab = df[['Libellé de la commune', voix]]\n",
     "    tab1 = df[['Libellé de la commune', prct]]\n",
     "      \n",
@@ -2152,20 +2096,24 @@
     "    frame1 = pd.DataFrame(tab1)\n",
     "     \n",
     "    res = frame.groupby([\"Libellé de la commune\"]).sum()\n",
+    "    a = res.reset_index()\n",
     "    res1 = frame1.groupby([\"Libellé de la commune\"]).mean()\n",
+    "    b = res1.reset_index()\n",
     "\n",
-    "    df1 = pd.DataFrame(res)\n",
-    "    df2 = pd.DataFrame(res1)\n",
-    "      \n",
-    "    #total = df1.merge(df2)\n",
+    "        \n",
+    "    total = a.merge(b)\n",
     "\n",
+    "    if choix == 1 : \n",
+    "            resultat = total.sort_values(by=voix,ascending=asc) \n",
+    "    elif choix == 2 :\n",
+    "            resultat = total.sort_values(by=prct,ascending=asc)\n",
     "\n",
-    "    return df1"
+    "    return resultat"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -2189,88 +2137,107 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Voix.MJL</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>Libellé de la commune</th>\n",
-       "      <th></th>\n",
+       "      <th>Voix.MJL</th>\n",
+       "      <th>% Voix/Ins.MJL</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Aast</th>\n",
-       "      <td>23</td>\n",
+       "      <th>16917</th>\n",
+       "      <td>Loubaut</td>\n",
+       "      <td>18</td>\n",
+       "      <td>72.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Abainville</th>\n",
-       "      <td>20</td>\n",
+       "      <th>9238</th>\n",
+       "      <td>Eourres</td>\n",
+       "      <td>71</td>\n",
+       "      <td>69.61</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Abancourt</th>\n",
-       "      <td>74</td>\n",
+       "      <th>30661</th>\n",
+       "      <td>Vachères-en-Quint</td>\n",
+       "      <td>22</td>\n",
+       "      <td>64.71</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Abaucourt</th>\n",
-       "      <td>26</td>\n",
+       "      <th>23268</th>\n",
+       "      <td>Quirbajou</td>\n",
+       "      <td>25</td>\n",
+       "      <td>59.52</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Abaucourt-Hautecourt</th>\n",
-       "      <td>5</td>\n",
+       "      <th>18773</th>\n",
+       "      <td>Molezon</td>\n",
+       "      <td>50</td>\n",
+       "      <td>58.14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Éloise</th>\n",
-       "      <td>78</td>\n",
+       "      <th>12450</th>\n",
+       "      <td>Hodenc-l'Evêque</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Étercy</th>\n",
-       "      <td>88</td>\n",
+       "      <th>11471</th>\n",
+       "      <td>Gourdièges</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Étrembières</th>\n",
-       "      <td>161</td>\n",
+       "      <th>3201</th>\n",
+       "      <td>Blanzée</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Évian-les-Bains</th>\n",
-       "      <td>872</td>\n",
+       "      <th>32503</th>\n",
+       "      <td>Voncourt</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Ô-de-Selle</th>\n",
-       "      <td>101</td>\n",
+       "      <th>3034</th>\n",
+       "      <td>Bieuxy</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>32987 rows × 1 columns</p>\n",
+       "<p>32987 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                       Voix.MJL\n",
-       "Libellé de la commune          \n",
-       "Aast                         23\n",
-       "Abainville                   20\n",
-       "Abancourt                    74\n",
-       "Abaucourt                    26\n",
-       "Abaucourt-Hautecourt          5\n",
-       "...                         ...\n",
-       "Éloise                       78\n",
-       "Étercy                       88\n",
-       "Étrembières                 161\n",
-       "Évian-les-Bains             872\n",
-       "Ô-de-Selle                  101\n",
+       "      Libellé de la commune  Voix.MJL  % Voix/Ins.MJL\n",
+       "16917               Loubaut        18           72.00\n",
+       "9238                Eourres        71           69.61\n",
+       "30661     Vachères-en-Quint        22           64.71\n",
+       "23268             Quirbajou        25           59.52\n",
+       "18773               Molezon        50           58.14\n",
+       "...                     ...       ...             ...\n",
+       "12450       Hodenc-l'Evêque         0            0.00\n",
+       "11471            Gourdièges         0            0.00\n",
+       "3201                Blanzée         0            0.00\n",
+       "32503              Voncourt         0            0.00\n",
+       "3034                 Bieuxy         0            0.00\n",
        "\n",
-       "[32987 rows x 1 columns]"
+       "[32987 rows x 3 columns]"
       ]
      },
-     "execution_count": 193,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "comm_prct('Voix.MJL','% Voix/Ins.MJL')"
+    "comm_candidat('Voix.MJL','% Voix/Ins.MJL',2, False)"
    ]
   }
  ],
