Fct candidat voix et % / commune

--- a/Groupe 2/Groupe 2/rendu.ipynb
+++ b/Groupe 2/Groupe 2/rendu.ipynb
@@ -415,34 +415,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def comm_prct(voix,prct,asc):\n",
+    "def comm_candidat(voix,prct,choix,asc):\n",
     "    tab = df[['Libellé de la commune', voix]]\n",
     "    tab1 = df[['Libellé de la commune', prct]]\n",
-    "\n",
+    "      \n",
     "    frame = pd.DataFrame(tab)\n",
     "    frame1 = pd.DataFrame(tab1)\n",
-    "    frame2 = frame.merge(frame1)\n",
+    "     \n",
+    "    res = frame.groupby([\"Libellé de la commune\"]).sum()\n",
+    "    a = res.reset_index()\n",
+    "    res1 = frame1.groupby([\"Libellé de la commune\"]).mean()\n",
+    "    b = res1.reset_index()\n",
     "\n",
-    "    #res1 = frame.groupby([\"Libellé de la commune\"]).sum()\n",
-    "    #res2 = frame1.groupby([\"Libellé de la commune\"]).mean()\n",
-    "    #res3 = res2.iloc[:, 0]\n",
-    "    #sort1 = res1.sort_values(by=voix,ascending=asc)\n",
-    "    #sort2 = res2.sort_values(by=prct,ascending=asc)\n",
+    "        \n",
+    "    total = a.merge(b)\n",
     "\n",
-    "    #total = pd.concat([res1,res3],copy=False)\n",
-    "    #print(res1)\n",
-    "    #print(res2)\n",
-    "    #print(res3)\n",
-    "    return frame2"
+    "    if choix == 1 : \n",
+    "            resultat = total.sort_values(by=voix,ascending=asc) \n",
+    "    elif choix == 2 :\n",
+    "            resultat = total.sort_values(by=prct,ascending=asc)\n",
+    "\n",
+    "    return resultat"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -473,34 +475,34 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>L'Abergement-de-Varey</td>\n",
-       "      <td>41</td>\n",
-       "      <td>19.25</td>\n",
+       "      <th>21603</th>\n",
+       "      <td>Paris</td>\n",
+       "      <td>317372</td>\n",
+       "      <td>22.732333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Ambérieu-en-Bugey</td>\n",
-       "      <td>216</td>\n",
-       "      <td>19.13</td>\n",
+       "      <th>17986</th>\n",
+       "      <td>Marseille</td>\n",
+       "      <td>108423</td>\n",
+       "      <td>20.852328</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Ambérieu-en-Bugey</td>\n",
-       "      <td>216</td>\n",
-       "      <td>17.20</td>\n",
+       "      <th>17223</th>\n",
+       "      <td>Lyon</td>\n",
+       "      <td>73367</td>\n",
+       "      <td>24.832066</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Ambérieu-en-Bugey</td>\n",
-       "      <td>216</td>\n",
-       "      <td>18.71</td>\n",
+       "      <th>30106</th>\n",
+       "      <td>Toulouse</td>\n",
+       "      <td>72169</td>\n",
+       "      <td>27.885736</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Ambérieu-en-Bugey</td>\n",
-       "      <td>216</td>\n",
-       "      <td>21.65</td>\n",
+       "      <th>20291</th>\n",
+       "      <td>Nantes</td>\n",
+       "      <td>48478</td>\n",
+       "      <td>24.300628</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -509,64 +511,64 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2195470</th>\n",
-       "      <td>Zurich</td>\n",
-       "      <td>1475</td>\n",
-       "      <td>5.93</td>\n",
+       "      <th>19829</th>\n",
+       "      <td>Mouilleron</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2195471</th>\n",
-       "      <td>Taipei</td>\n",
-       "      <td>176</td>\n",
-       "      <td>10.30</td>\n",
+       "      <th>29515</th>\n",
+       "      <td>Tallans</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2195472</th>\n",
-       "      <td>Nour-Soultan</td>\n",
-       "      <td>9</td>\n",
-       "      <td>7.69</td>\n",
+       "      <th>10344</th>\n",
+       "      <td>Fontenay-de-Bossery</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2195473</th>\n",
-       "      <td>Monterrey</td>\n",
-       "      <td>19</td>\n",
-       "      <td>2.66</td>\n",
+       "      <th>29875</th>\n",
+       "      <td>Thorey</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2195474</th>\n",
-       "      <td>Bahamas (Nassau)</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1.47</td>\n",
+       "      <th>8100</th>\n",
+       "      <td>Cuiry-lès-Iviers</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2195475 rows × 3 columns</p>\n",
+       "<p>32987 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Libellé de la commune  Voix.MJL  % Voix/Ins.MJL\n",
-       "0        L'Abergement-de-Varey        41           19.25\n",
-       "1            Ambérieu-en-Bugey       216           19.13\n",
-       "2            Ambérieu-en-Bugey       216           17.20\n",
-       "3            Ambérieu-en-Bugey       216           18.71\n",
-       "4            Ambérieu-en-Bugey       216           21.65\n",
-       "...                        ...       ...             ...\n",
-       "2195470                 Zurich      1475            5.93\n",
-       "2195471                 Taipei       176           10.30\n",
-       "2195472           Nour-Soultan         9            7.69\n",
-       "2195473              Monterrey        19            2.66\n",
-       "2195474       Bahamas (Nassau)         2            1.47\n",
+       "      Libellé de la commune  Voix.MJL  % Voix/Ins.MJL\n",
+       "21603                 Paris    317372       22.732333\n",
+       "17986             Marseille    108423       20.852328\n",
+       "17223                  Lyon     73367       24.832066\n",
+       "30106              Toulouse     72169       27.885736\n",
+       "20291                Nantes     48478       24.300628\n",
+       "...                     ...       ...             ...\n",
+       "19829            Mouilleron         0        0.000000\n",
+       "29515               Tallans         0        0.000000\n",
+       "10344   Fontenay-de-Bossery         0        0.000000\n",
+       "29875                Thorey         0        0.000000\n",
+       "8100       Cuiry-lès-Iviers         0        0.000000\n",
        "\n",
-       "[2195475 rows x 3 columns]"
+       "[32987 rows x 3 columns]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "comm_prct('Voix.MJL', '% Voix/Ins.MJL', False)"
+    "comm_candidat('Voix.MJL', '% Voix/Ins.MJL', 1,False)"
    ]
   }
  ],
