--- a/Groupe 2/Groupe 2/rendu.ipynb
+++ b/Groupe 2/Groupe 2/rendu.ipynb
@@ -1501,62 +1501,323 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                               1         2         3         4         5   \\\n",
-      "Libellé du département                                                      \n",
-      "Ain                      0.004559 -0.021217  0.195932 -0.399959  0.471053   \n",
-      "Aisne                   -0.891196 -0.625696 -0.863537 -0.141059  0.088947   \n",
-      "Allier                  -1.734453 -0.329894 -0.040445 -0.138947 -0.157497   \n",
-      "Alpes-Maritimes          2.858708  0.422527 -0.373194 -0.782792  2.192264   \n",
-      "Alpes-de-Haute-Provence -3.430411  0.170433  0.086725 -0.183725  0.082452   \n",
-      "...                           ...       ...       ...       ...       ...   \n",
-      "Vienne                  -1.171259 -0.204024 -0.049451 -0.040169 -0.419716   \n",
-      "Vosges                  -1.598702 -0.315022 -0.245386 -0.168878  0.054692   \n",
-      "Wallis et Futuna        -4.813125  0.519041 -0.023682 -0.278071 -0.079823   \n",
-      "Yonne                   -2.241510 -0.034318 -0.169178 -0.329425  0.123814   \n",
-      "Yvelines                 4.903125  2.046422  0.616155 -1.438597  0.513270   \n",
-      "\n",
-      "                               6         7         8         9         10  \\\n",
-      "Libellé du département                                                      \n",
-      "Ain                     -0.058889 -0.349128 -0.005472 -0.080793 -0.258753   \n",
-      "Aisne                    0.197115 -0.066176 -0.324399  0.030701  0.257910   \n",
-      "Allier                  -0.079807  0.342079 -0.162392  0.177022 -0.130778   \n",
-      "Alpes-Maritimes          0.944313 -0.060073 -0.627541 -0.150673  0.303449   \n",
-      "Alpes-de-Haute-Provence -0.173856  0.233771  0.126070 -0.175420  0.068035   \n",
-      "...                           ...       ...       ...       ...       ...   \n",
-      "Vienne                  -0.084861 -0.052763  0.027325 -0.043620  0.101479   \n",
-      "Vosges                  -0.004214 -0.345706  0.013661 -0.024083  0.102460   \n",
-      "Wallis et Futuna        -0.260328  0.254159  0.013369 -0.176652  0.045593   \n",
-      "Yonne                   -0.186675  0.014894  0.040599 -0.006621  0.081919   \n",
-      "Yvelines                 0.409670 -0.135928 -0.467420  1.138256  0.000712   \n",
-      "\n",
-      "                               11        12        13        14        15  \n",
-      "Libellé du département                                                     \n",
-      "Ain                     -0.033505 -0.051188  0.035515  0.080975  0.004087  \n",
-      "Aisne                   -0.121204  0.118460 -0.032147  0.101060 -0.087125  \n",
-      "Allier                   0.260835 -0.100779  0.015879 -0.105121  0.003692  \n",
-      "Alpes-Maritimes          0.211940 -0.241578  0.003054 -0.113584  0.020511  \n",
-      "Alpes-de-Haute-Provence  0.078984  0.059231 -0.023051  0.029208  0.017723  \n",
-      "...                           ...       ...       ...       ...       ...  \n",
-      "Vienne                   0.097170 -0.003132 -0.002788 -0.061461  0.052398  \n",
-      "Vosges                   0.001317  0.081456  0.053270  0.005951 -0.016054  \n",
-      "Wallis et Futuna        -0.009110  0.074898 -0.019180  0.032921  0.020703  \n",
-      "Yonne                   -0.040012  0.073696  0.049282  0.010661 -0.043515  \n",
-      "Yvelines                -0.094859  0.226294  0.177420 -0.013961 -0.186384  \n",
-      "\n",
-      "[107 rows x 15 columns]\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "      <th>11</th>\n",
+       "      <th>12</th>\n",
+       "      <th>13</th>\n",
+       "      <th>14</th>\n",
+       "      <th>15</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Libellé du département</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Ain</th>\n",
+       "      <td>0.004559</td>\n",
+       "      <td>-0.021217</td>\n",
+       "      <td>0.195932</td>\n",
+       "      <td>-0.399959</td>\n",
+       "      <td>0.471053</td>\n",
+       "      <td>-0.058889</td>\n",
+       "      <td>-0.349128</td>\n",
+       "      <td>-0.005472</td>\n",
+       "      <td>-0.080793</td>\n",
+       "      <td>-0.258753</td>\n",
+       "      <td>-0.033505</td>\n",
+       "      <td>-0.051188</td>\n",
+       "      <td>0.035515</td>\n",
+       "      <td>0.080975</td>\n",
+       "      <td>0.004087</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Aisne</th>\n",
+       "      <td>-0.891196</td>\n",
+       "      <td>-0.625696</td>\n",
+       "      <td>-0.863537</td>\n",
+       "      <td>-0.141059</td>\n",
+       "      <td>0.088947</td>\n",
+       "      <td>0.197115</td>\n",
+       "      <td>-0.066176</td>\n",
+       "      <td>-0.324399</td>\n",
+       "      <td>0.030701</td>\n",
+       "      <td>0.257910</td>\n",
+       "      <td>-0.121204</td>\n",
+       "      <td>0.118460</td>\n",
+       "      <td>-0.032147</td>\n",
+       "      <td>0.101060</td>\n",
+       "      <td>-0.087125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Allier</th>\n",
+       "      <td>-1.734453</td>\n",
+       "      <td>-0.329894</td>\n",
+       "      <td>-0.040445</td>\n",
+       "      <td>-0.138947</td>\n",
+       "      <td>-0.157497</td>\n",
+       "      <td>-0.079807</td>\n",
+       "      <td>0.342079</td>\n",
+       "      <td>-0.162392</td>\n",
+       "      <td>0.177022</td>\n",
+       "      <td>-0.130778</td>\n",
+       "      <td>0.260835</td>\n",
+       "      <td>-0.100779</td>\n",
+       "      <td>0.015879</td>\n",
+       "      <td>-0.105121</td>\n",
+       "      <td>0.003692</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Alpes-Maritimes</th>\n",
+       "      <td>2.858708</td>\n",
+       "      <td>0.422527</td>\n",
+       "      <td>-0.373194</td>\n",
+       "      <td>-0.782792</td>\n",
+       "      <td>2.192264</td>\n",
+       "      <td>0.944313</td>\n",
+       "      <td>-0.060073</td>\n",
+       "      <td>-0.627541</td>\n",
+       "      <td>-0.150673</td>\n",
+       "      <td>0.303449</td>\n",
+       "      <td>0.211940</td>\n",
+       "      <td>-0.241578</td>\n",
+       "      <td>0.003054</td>\n",
+       "      <td>-0.113584</td>\n",
+       "      <td>0.020511</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Alpes-de-Haute-Provence</th>\n",
+       "      <td>-3.430411</td>\n",
+       "      <td>0.170433</td>\n",
+       "      <td>0.086725</td>\n",
+       "      <td>-0.183725</td>\n",
+       "      <td>0.082452</td>\n",
+       "      <td>-0.173856</td>\n",
+       "      <td>0.233771</td>\n",
+       "      <td>0.126070</td>\n",
+       "      <td>-0.175420</td>\n",
+       "      <td>0.068035</td>\n",
+       "      <td>0.078984</td>\n",
+       "      <td>0.059231</td>\n",
+       "      <td>-0.023051</td>\n",
+       "      <td>0.029208</td>\n",
+       "      <td>0.017723</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Vienne</th>\n",
+       "      <td>-1.171259</td>\n",
+       "      <td>-0.204024</td>\n",
+       "      <td>-0.049451</td>\n",
+       "      <td>-0.040169</td>\n",
+       "      <td>-0.419716</td>\n",
+       "      <td>-0.084861</td>\n",
+       "      <td>-0.052763</td>\n",
+       "      <td>0.027325</td>\n",
+       "      <td>-0.043620</td>\n",
+       "      <td>0.101479</td>\n",
+       "      <td>0.097170</td>\n",
+       "      <td>-0.003132</td>\n",
+       "      <td>-0.002788</td>\n",
+       "      <td>-0.061461</td>\n",
+       "      <td>0.052398</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Vosges</th>\n",
+       "      <td>-1.598702</td>\n",
+       "      <td>-0.315022</td>\n",
+       "      <td>-0.245386</td>\n",
+       "      <td>-0.168878</td>\n",
+       "      <td>0.054692</td>\n",
+       "      <td>-0.004214</td>\n",
+       "      <td>-0.345706</td>\n",
+       "      <td>0.013661</td>\n",
+       "      <td>-0.024083</td>\n",
+       "      <td>0.102460</td>\n",
+       "      <td>0.001317</td>\n",
+       "      <td>0.081456</td>\n",
+       "      <td>0.053270</td>\n",
+       "      <td>0.005951</td>\n",
+       "      <td>-0.016054</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wallis et Futuna</th>\n",
+       "      <td>-4.813125</td>\n",
+       "      <td>0.519041</td>\n",
+       "      <td>-0.023682</td>\n",
+       "      <td>-0.278071</td>\n",
+       "      <td>-0.079823</td>\n",
+       "      <td>-0.260328</td>\n",
+       "      <td>0.254159</td>\n",
+       "      <td>0.013369</td>\n",
+       "      <td>-0.176652</td>\n",
+       "      <td>0.045593</td>\n",
+       "      <td>-0.009110</td>\n",
+       "      <td>0.074898</td>\n",
+       "      <td>-0.019180</td>\n",
+       "      <td>0.032921</td>\n",
+       "      <td>0.020703</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yonne</th>\n",
+       "      <td>-2.241510</td>\n",
+       "      <td>-0.034318</td>\n",
+       "      <td>-0.169178</td>\n",
+       "      <td>-0.329425</td>\n",
+       "      <td>0.123814</td>\n",
+       "      <td>-0.186675</td>\n",
+       "      <td>0.014894</td>\n",
+       "      <td>0.040599</td>\n",
+       "      <td>-0.006621</td>\n",
+       "      <td>0.081919</td>\n",
+       "      <td>-0.040012</td>\n",
+       "      <td>0.073696</td>\n",
+       "      <td>0.049282</td>\n",
+       "      <td>0.010661</td>\n",
+       "      <td>-0.043515</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yvelines</th>\n",
+       "      <td>4.903125</td>\n",
+       "      <td>2.046422</td>\n",
+       "      <td>0.616155</td>\n",
+       "      <td>-1.438597</td>\n",
+       "      <td>0.513270</td>\n",
+       "      <td>0.409670</td>\n",
+       "      <td>-0.135928</td>\n",
+       "      <td>-0.467420</td>\n",
+       "      <td>1.138256</td>\n",
+       "      <td>0.000712</td>\n",
+       "      <td>-0.094859</td>\n",
+       "      <td>0.226294</td>\n",
+       "      <td>0.177420</td>\n",
+       "      <td>-0.013961</td>\n",
+       "      <td>-0.186384</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>107 rows × 15 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               1         2         3         4         5   \\\n",
+       "Libellé du département                                                      \n",
+       "Ain                      0.004559 -0.021217  0.195932 -0.399959  0.471053   \n",
+       "Aisne                   -0.891196 -0.625696 -0.863537 -0.141059  0.088947   \n",
+       "Allier                  -1.734453 -0.329894 -0.040445 -0.138947 -0.157497   \n",
+       "Alpes-Maritimes          2.858708  0.422527 -0.373194 -0.782792  2.192264   \n",
+       "Alpes-de-Haute-Provence -3.430411  0.170433  0.086725 -0.183725  0.082452   \n",
+       "...                           ...       ...       ...       ...       ...   \n",
+       "Vienne                  -1.171259 -0.204024 -0.049451 -0.040169 -0.419716   \n",
+       "Vosges                  -1.598702 -0.315022 -0.245386 -0.168878  0.054692   \n",
+       "Wallis et Futuna        -4.813125  0.519041 -0.023682 -0.278071 -0.079823   \n",
+       "Yonne                   -2.241510 -0.034318 -0.169178 -0.329425  0.123814   \n",
+       "Yvelines                 4.903125  2.046422  0.616155 -1.438597  0.513270   \n",
+       "\n",
+       "                               6         7         8         9         10  \\\n",
+       "Libellé du département                                                      \n",
+       "Ain                     -0.058889 -0.349128 -0.005472 -0.080793 -0.258753   \n",
+       "Aisne                    0.197115 -0.066176 -0.324399  0.030701  0.257910   \n",
+       "Allier                  -0.079807  0.342079 -0.162392  0.177022 -0.130778   \n",
+       "Alpes-Maritimes          0.944313 -0.060073 -0.627541 -0.150673  0.303449   \n",
+       "Alpes-de-Haute-Provence -0.173856  0.233771  0.126070 -0.175420  0.068035   \n",
+       "...                           ...       ...       ...       ...       ...   \n",
+       "Vienne                  -0.084861 -0.052763  0.027325 -0.043620  0.101479   \n",
+       "Vosges                  -0.004214 -0.345706  0.013661 -0.024083  0.102460   \n",
+       "Wallis et Futuna        -0.260328  0.254159  0.013369 -0.176652  0.045593   \n",
+       "Yonne                   -0.186675  0.014894  0.040599 -0.006621  0.081919   \n",
+       "Yvelines                 0.409670 -0.135928 -0.467420  1.138256  0.000712   \n",
+       "\n",
+       "                               11        12        13        14        15  \n",
+       "Libellé du département                                                     \n",
+       "Ain                     -0.033505 -0.051188  0.035515  0.080975  0.004087  \n",
+       "Aisne                   -0.121204  0.118460 -0.032147  0.101060 -0.087125  \n",
+       "Allier                   0.260835 -0.100779  0.015879 -0.105121  0.003692  \n",
+       "Alpes-Maritimes          0.211940 -0.241578  0.003054 -0.113584  0.020511  \n",
+       "Alpes-de-Haute-Provence  0.078984  0.059231 -0.023051  0.029208  0.017723  \n",
+       "...                           ...       ...       ...       ...       ...  \n",
+       "Vienne                   0.097170 -0.003132 -0.002788 -0.061461  0.052398  \n",
+       "Vosges                   0.001317  0.081456  0.053270  0.005951 -0.016054  \n",
+       "Wallis et Futuna        -0.009110  0.074898 -0.019180  0.032921  0.020703  \n",
+       "Yonne                   -0.040012  0.073696  0.049282  0.010661 -0.043515  \n",
+       "Yvelines                -0.094859  0.226294  0.177420 -0.013961 -0.186384  \n",
+       "\n",
+       "[107 rows x 15 columns]"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "cf = pd.DataFrame(coord,index=df_acp_dep.index,columns=np.arange(1,p+1))\n",
-    "print(cf)"
+    "cf"
    ]
   },
   {
